# refbox

./: .gitignore  404.html  LICENSE  README.md  build.sh  docs-requirements.txt  index.html  mkdocs.yml  pyproject.toml  release.sh  sitemap.xml
.github/workflows/: tests.yml  workflow.yml
api/: index.html
commands/pipeline/: index.html
config/: species.yaml
config/output-layout/: index.html
config/species/: index.html
docs/: api.md  api.zh.md  index.md  index.zh.md  installation.md  installation.zh.md  quickstart.md  quickstart.zh.md
docs/commands/: build.md  build.zh.md  pipeline.md  pipeline.zh.md
docs/config/: output-layout.md  output-layout.zh.md  species.md  species.zh.md
docs/indexes/: rba.md  rba.zh.md  rbi.md  rbi.zh.md
indexes/rba/: index.html
indexes/rbi/: index.html
installation/: index.html
quickstart/: index.html
script/: 01_download.py  02_build_file.py  03_test.py  benchmark_lite_rbrowser_annotation_index.py  build_all_species_sqlite.sh  build_lite_rbrowser_annotation_index.py  build_rbrowser_sqlite_index.py  clean_rnacentral_gff.py  inspect_rbrowser_sqlite_index.py  search_lite_rbrowser_annotation_index.py  test_rbrowser_sqlite_search.py
search/: search_index.json
src/refbox/: __init__.py  build.py  cli.py  config.py  download.py  file_build.py  ingest.py  lite_index.py  report.py  sqlite_index.py  test.py  utils.py
tests/: test_build.py  test_lite_index.py  test_sqlite_index.py
web/: rbrowser-search.js
zh/: index.html
zh/api/: index.html
zh/installation/: index.html
zh/quickstart/: index.html
(+6 files in other folders)
