[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "refbox"
version = "0.4.0"
description = "Build standardized, indexed reference files (genome, annotation, repeats, RNAcentral, cCRE) for genome browsers."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Lei Zheng" }]
keywords = ["bioinformatics", "genome", "browser", "reference", "tabix", "gencode", "ucsc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
    "tqdm>=4.65",
]

[project.urls]
Homepage   = "https://github.com/typekey/refbox"
Repository = "https://github.com/typekey/refbox"
Issues     = "https://github.com/typekey/refbox/issues"

[project.scripts]
refbox = "refbox.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
refbox = ["config/species.yaml"]
